samples/_failures_safe/1761273344_50b6b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_daf34090.c: In function ‘main’:
./samples/SAFE/__tmp_daf34090.c:175:9: error: expected declaration or statement at end of input
  175 |         printf("%zu: %s", i + 1, token_type_name(tokens->tokens[i].type));
      |         ^~~~~~
./samples/SAFE/__tmp_daf34090.c:175:9: error: expected declaration or statement at end of input
